Archive2/33/18b7cf4a8a7703/output
main.cpp:11:9: error: non-constant-expression cannot be narrowed from type 'int' to 'bool' in initializer list [-Wc++11-narrowing]
    X x{d};
        ^
main.cpp:11:9: note: insert an explicit cast to silence this issue
    X x{d};
        ^
        static_cast<bool>( )
1 error generated.
